--- a/src/Ragade'sCubeWin/Ragade'sCubeWin/Ragade'sCubeWin.csproj
+++ b/src/Ragade'sCubeWin/Ragade'sCubeWin/Ragade'sCubeWin.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Ragade_sCubeWin</RootNamespace>
+    <RootNamespace>RagadesCubeWin</RootNamespace>
     <AssemblyName>Ragade%27sCubeWin</AssemblyName>
     <XnaFrameworkVersion>v1.0</XnaFrameworkVersion>
     <XnaPlatform>Windows</XnaPlatform>
@@ -51,6 +51,8 @@
     <Reference Include="System">
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -59,6 +61,34 @@
     <Compile Include="Game.cs">
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>Game</Name>
+    </Compile>
+    <Compile Include="Cameras\Camera.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>Camera</Name>
+    </Compile>
+    <Compile Include="Cameras\CameraManager.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>CameraManager</Name>
+    </Compile>
+    <Compile Include="SceneManagement\DirectionalLight.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>DirectionalLight</Name>
+    </Compile>
+    <Compile Include="Rendering\RenderManager.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>RenderManager</Name>
+    </Compile>
+    <Compile Include="SceneManagement\Node.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>Node</Name>
+    </Compile>
+    <Compile Include="SceneManagement\SceneObject.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>SceneObject</Name>
+    </Compile>
+    <Compile Include="SceneObjects\Cublet.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>Cublet</Name>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -71,6 +101,30 @@
       <Importer>TextureImporter</Importer>
       <Processor>SpriteTextureProcessor</Processor>
       <Name>GameThumbnail</Name>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\Models\Cube.x">
+      <XNAUseContentPipeline>true</XNAUseContentPipeline>
+      <Importer>XImporter</Importer>
+      <Processor>ModelProcessor</Processor>
+      <Name>Cube</Name>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\Models\xwing.x">
+      <XNAUseContentPipeline>true</XNAUseContentPipeline>
+      <Importer>XImporter</Importer>
+      <Processor>ModelProcessor</Processor>
+      <Name>xwing</Name>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\Models\CubeletBox.x">
+      <XNAUseContentPipeline>true</XNAUseContentPipeline>
+      <Importer>XImporter</Importer>
+      <Processor>ModelProcessor</Processor>
+      <Name>CubeletBox</Name>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
