Alot happened in these changes:
I added the StateManager as a service and have game logic. For now, I have implemented a test state, just to display stuff.

Also there is the Generic RCGameState class, modify it when you want to put logic abstract to all game states.

Also, I have constructed the cube graph structure. Just create an instance of RCCube and the whole graph will be created in the constructor.

Can be created for all odd cube sizes, will update to all sizes, even or odd.

--- a/src/Ragade'sCubeWin/Ragade'sCubeWin/Ragade'sCubeWin.csproj
+++ b/src/Ragade'sCubeWin/Ragade'sCubeWin/Ragade'sCubeWin.csproj
@@ -90,9 +90,37 @@
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>SceneObject</Name>
     </Compile>
+    <Compile Include="SceneObjects\Cube.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>Cube</Name>
+    </Compile>
+    <Compile Include="SceneObjects\CubeletBox.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>CubeletBox</Name>
+    </Compile>
     <Compile Include="SceneObjects\Cublet.cs">
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>Cublet</Name>
+    </Compile>
+    <Compile Include="SceneObjects\Face.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>Face</Name>
+    </Compile>
+    <Compile Include="SceneObjects\Facelet.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>Facelet</Name>
+    </Compile>
+    <Compile Include="StateManagement\GameState.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>GameState</Name>
+    </Compile>
+    <Compile Include="StateManagement\StateManager.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>StateManager</Name>
+    </Compile>
+    <Compile Include="States\TestState.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>TestState</Name>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -137,6 +165,14 @@
       <Importer>FontDescriptionImporter</Importer>
       <Processor>FontDescriptionProcessor</Processor>
       <Name>Courier New</Name>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\Models\Facelet.x">
+      <XNAUseContentPipeline>true</XNAUseContentPipeline>
+      <Importer>XImporter</Importer>
+      <Processor>ModelProcessor</Processor>
+      <Name>Facelet</Name>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
