Added Animation for he Cube!  Use the CubeController to make moves on the Cube.cs
Also, The game should run faster, I turned fixed time stepping off.

Also, Reduced the Polygon count of the CubeletBox to lat leat 5% of what is was. You can't really tell the difference.

--- a/src/Ragade'sCubeWin/Ragade'sCubeWin/Ragade'sCubeWin.csproj
+++ b/src/Ragade'sCubeWin/Ragade'sCubeWin/Ragade'sCubeWin.csproj
@@ -59,6 +59,10 @@
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>Controller</Name>
     </Compile>
+    <Compile Include="Animation\Controllers\CubeController.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>CubeController</Name>
+    </Compile>
     <Compile Include="FPS.cs">
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>FPS</Name>
