Added RCCubeCursor that allows a cursor to be used to select faces on the game cube.
Changed RCCubeController to have a property to show if an animation is currently running.

Change RCCube to show the cube's length, width, and height.

Updated TestState.cs to test the new game cursor and some possible appropriate inputs.

--- a/src/Ragade'sCubeWin/Ragade'sCubeWin/Ragade'sCubeWin.csproj
+++ b/src/Ragade'sCubeWin/Ragade'sCubeWin/Ragade'sCubeWin.csproj
@@ -208,6 +208,10 @@
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>Cube</Name>
     </Compile>
+    <Compile Include="SceneObjects\CubeCursor.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>CubeCursor</Name>
+    </Compile>
     <Compile Include="SceneObjects\CubeletBox.cs">
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>CubeletBox</Name>
