Began adding scheme class, adjusted the input system to use it.  Will need to do more changes in the very near future.

--- a/src/Ragade'sCubeWin/Ragade'sCubeWin/Ragade'sCubeWin.csproj
+++ b/src/Ragade'sCubeWin/Ragade'sCubeWin/Ragade'sCubeWin.csproj
@@ -155,6 +155,10 @@
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>RealMouseState</Name>
     </Compile>
+    <Compile Include="Input\Scheme.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>Scheme</Name>
+    </Compile>
     <Compile Include="Input\Types\EventTypes.cs">
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>EventTypes</Name>
