--- a/trunk/src/Ragade'sCubeWin/Ragade'sCubeWin/Ragade'sCubeWin.csproj
+++ b/trunk/src/Ragade'sCubeWin/Ragade'sCubeWin/Ragade'sCubeWin.csproj
@@ -139,6 +139,10 @@
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>MouseEvent</Name>
     </Compile>
+    <Compile Include="Input\Events\XBox360GamePadEvent.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>XBox360GamePadEvent</Name>
+    </Compile>
     <Compile Include="Input\InputManager.cs">
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>InputManager</Name>
@@ -154,6 +158,10 @@
     <Compile Include="Input\RealMouseState.cs">
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>RealMouseState</Name>
+    </Compile>
+    <Compile Include="Input\RealXBoxGamePad.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>RealXBoxGamePad</Name>
     </Compile>
     <Compile Include="Input\Scheme.cs">
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
@@ -171,6 +179,10 @@
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>MouseInput</Name>
     </Compile>
+    <Compile Include="Input\Types\XBox360GamePadTypes.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>XBox360GamePadTypes</Name>
+    </Compile>
     <Compile Include="Input\Watchers\Keyboard.cs">
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>Keyboard</Name>
@@ -178,6 +190,10 @@
     <Compile Include="Input\Watchers\Mouse.cs">
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>Mouse</Name>
+    </Compile>
+    <Compile Include="Input\Watchers\XBox360GamePad.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>XBox360GamePad</Name>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs">
