--- a/trunk/src/Ragade'sCubeWin/Ragade'sCubeWin/Ragade'sCubeWin.csproj
+++ b/trunk/src/Ragade'sCubeWin/Ragade'sCubeWin/Ragade'sCubeWin.csproj
@@ -63,9 +63,33 @@
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>CubeController</Name>
     </Compile>
+    <Compile Include="Cameras\OrthographicCamera.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>OrthographicCamera</Name>
+    </Compile>
+    <Compile Include="Cameras\PerspectiveCamera.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>PerspectiveCamera</Name>
+    </Compile>
     <Compile Include="FPS.cs">
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>FPS</Name>
+    </Compile>
+    <Compile Include="GraphicsManagement\BoundingVolumes\BoundingBox.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>BoundingBox</Name>
+    </Compile>
+    <Compile Include="GraphicsManagement\BoundingVolumes\BoundingRect.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>BoundingRect</Name>
+    </Compile>
+    <Compile Include="GraphicsManagement\BoundingVolumes\BoundingShpere.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>BoundingShpere</Name>
+    </Compile>
+    <Compile Include="GraphicsManagement\BoundingVolumes\BoundingVolume.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>BoundingVolume</Name>
     </Compile>
     <Compile Include="GraphicsManagement\Spatial.cs">
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
@@ -115,18 +139,22 @@
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>RCRadioChannel</Name>
     </None>
-    <None Include="GUI\Panes\RCPane.cs">
+    <Compile Include="GUI\Panes\RCPane.cs">
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>RCPane</Name>
-    </None>
-    <None Include="GUI\RCIGUIObject.cs">
+    </Compile>
+    <Compile Include="GUI\Primitives\Quad.cs">
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>RCIGUIObject</Name>
-    </None>
-    <None Include="GUI\TemporaryAttributes.cs">
+      <Name>Quad</Name>
+    </Compile>
+    <Compile Include="GUI\TemporaryAttributes.cs">
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>TemporaryAttributes</Name>
-    </None>
+    </Compile>
+    <Compile Include="GUI\RCUIManager.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>RCUIManager</Name>
+    </Compile>
     <Compile Include="Input\Events\Event.cs">
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>Event</Name>
@@ -312,9 +340,18 @@
       <Processor>ModelProcessor</Processor>
       <Name>Facelet</Name>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="GUI\Primitives\" />
+    <Content Include="Content\Textures\GuiTest.png">
+      <XNAUseContentPipeline>true</XNAUseContentPipeline>
+      <Importer>TextureImporter</Importer>
+      <Processor>SpriteTextureProcessor</Processor>
+      <Name>GuiTest</Name>
+    </Content>
+    <Content Include="Content\Textures\UpgradeChrisBackground.bmp">
+      <XNAUseContentPipeline>true</XNAUseContentPipeline>
+      <Importer>TextureImporter</Importer>
+      <Processor>SpriteTextureProcessor</Processor>
+      <Name>UpgradeChrisBackground</Name>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA\Game Studio Express\v1.0\Microsoft.Xna.ContentPipeline.targets" />
