Added ISpatial and INode,
Also made the new FlatSpatial class in the GUI system.
Quad now derives from FlatSpatial and Pane resizes its children upon add. It works now. The GUI Test image appears because of the new system.

--- a/src/Ragade'sCubeWin/Ragade'sCubeWin/Ragade'sCubeWin.csproj
+++ b/src/Ragade'sCubeWin/Ragade'sCubeWin/Ragade'sCubeWin.csproj
@@ -91,6 +91,10 @@
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>BoundingVolume</Name>
     </Compile>
+    <Compile Include="GraphicsManagement\SceneInterfaces.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>SceneInterfaces</Name>
+    </Compile>
     <Compile Include="GraphicsManagement\Spatial.cs">
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>Spatial</Name>
@@ -139,6 +143,18 @@
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>RCRadioChannel</Name>
     </None>
+    <Compile Include="GUI\FlatSpatial.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>FlatSpatial</Name>
+    </Compile>
+    <Compile Include="GUI\GUIEvent.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>GUIEvent</Name>
+    </Compile>
+    <Compile Include="GUI\IGUIElement.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>IGUIElement</Name>
+    </Compile>
     <Compile Include="GUI\Panes\RCPane.cs">
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>RCPane</Name>
