Added the picking system.
Pick results come out as a PickRecord.

You may filter on types for a pick record, choose to keep or remove compatible types. Also you may get the closeset or furhtest, or a sorted and or flitered list of hits.

--- a/src/Ragade'sCubeWin/Ragade'sCubeWin/Ragade'sCubeWin.csproj
+++ b/src/Ragade'sCubeWin/Ragade'sCubeWin/Ragade'sCubeWin.csproj
@@ -251,6 +251,14 @@
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>XBox360GamePad</Name>
     </Compile>
+    <Compile Include="Picking\PickRecord.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>PickRecord</Name>
+    </Compile>
+    <Compile Include="Picking\ScenePicker.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>ScenePicker</Name>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs">
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
