RCButton responds to simple events.  Committing to back up code in a working state before changing the paradigm by which images for a control are stored.

--- a/src/Ragade'sCubeWin/Ragade'sCubeWin/Ragade'sCubeWin.csproj
+++ b/src/Ragade'sCubeWin/Ragade'sCubeWin/Ragade'sCubeWin.csproj
@@ -473,6 +473,12 @@
       <Processor>SpriteTextureProcessor</Processor>
       <Name>GuiTest</Name>
     </Content>
+    <Content Include="Content\Textures\nothing.png">
+      <XNAUseContentPipeline>true</XNAUseContentPipeline>
+      <Importer>TextureImporter</Importer>
+      <Processor>SpriteTextureProcessor</Processor>
+      <Name>nothing</Name>
+    </Content>
     <Content Include="Content\Textures\roughButtonImage.png">
       <XNAUseContentPipeline>true</XNAUseContentPipeline>
       <Importer>TextureImporter</Importer>
